--- a/browsr/dependencies.gradle
+++ b/browsr/dependencies.gradle
@@ -1,23 +1,23 @@
 ext {
     version = [
-            activityKtx                : '1.6.1',
-            androidxCore               : '1.9.0',
+            activityKtx                : '1.8.2',
+            androidxCore               : '1.12.0',
             appCompat                  : '1.6.1',
             constraintLayout           : '2.1.4',
-            coreTesting                : '2.1.0',
-            coroutines                 : '1.6.4',
+            coreTesting                : '2.2.0',
+            coroutines                 : '1.7.3',
             junit                      : '4.13.2',
-            koin                       : '2.1.6',
-            material                   : '1.3.1',
+            koin                       : '3.5.3',
+            material                   : '1.11.0',
             mockk                      : '1.10.2',
-            moshi                      : '1.14.0',
-            moshiKotlinCodegen         : '1.14.0',
+            moshi                      : '1.15.1',
+            moshiKotlinCodegen         : '1.15.0',
             moshiConverter             : '2.9.0',
-            okHttp                     : '4.10.0',
+            okHttp                     : '4.12.0',
             retrofit                   : '2.9.0',
-            room                       : '2.5.0',
+            room                       : '2.6.1',
             scalars                    : '2.9.0',
-            timber                     : '4.7.1'
+            timber                     : '5.0.1'
     ]
     libs = [
             activityKtx                : "androidx.activity:activity-ktx:$version.activityKtx",
@@ -29,7 +29,7 @@ ext {
             coroutinesCore             : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version.coroutines",
             coroutinesTest             : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$version.coroutines",
             junit                      : "junit:junit:$version.junit",
-            koin                       : "org.koin:koin-android:$version.koin",
+            koin                       : "io.insert-koin:koin-android:$version.koin",
             material                   : "com.google.android.material:material:$version.material",
             mockk                      : "io.mockk:mockk:$version.mockk",
             moshi                      : "com.squareup.moshi:moshi-kotlin:$version.moshi",
